--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "lodash": "^4.17.23",
+    "oh-vue-icons": "^1.0.0-rc3",
     "primeicons": "^7.0.0",
     "primevue": "^4.5.4",
     "vue": "^3.5.24"
